# duckdag

./: PIPELINE_PLATFORM.md  SHADOW_MODE.md  UBER_PIPELINE.md  backlog.md
demo/: crypto_summary.csv  demo.duckdb  (+2 more)
pipeline_cli/: pyproject.toml
pipeline_cli/src/pipeline_cli/: __main__.py  main.py
pipeline_core/: .gitignore  PIPELINE_CORE.md  pyproject.toml
pipeline_core/.claude/: settings.local.json
pipeline_core/src/pipeline_core/: __init__.py
pipeline_core/src/pipeline_core/bundle/: __init__.py
pipeline_core/src/pipeline_core/executor/: __init__.py  probe_executor.py  shadow_diff.py  shadow_executor.py
pipeline_core/src/pipeline_core/exporters/: DAGSTER_EXPORT.md  __init__.py  dagster_exporter.py  script_exporter.py
pipeline_core/src/pipeline_core/lineage/: __init__.py  provenance.py  tracking.py
pipeline_core/src/pipeline_core/planner/: __init__.py
pipeline_core/src/pipeline_core/registry/: __init__.py
pipeline_core/src/pipeline_core/resolver/: __init__.py  loader.py  models.py  shadow_loader.py  validator.py
pipeline_core/src/pipeline_core/session/: __init__.py  store.py
pipeline_core/src/pipeline_core/transforms/: __init__.py  loader.py
pipeline_core/tests/: conftest.py
pipeline_core/tests/executor/: test_executor.py
pipeline_core/tests/lineage/: test_lineage.py  test_provenance.py
pipeline_core/tests/planner/: test_planner.py
pipeline_core/tests/resolver/: test_loader.py  test_models.py  test_validator.py
pipeline_core/tests/session/: test_session.py
pipeline_service/: .gitignore  PALETTE_MODEL.md  PIPELINE_SERVICE.md  pyproject.toml
pipeline_service/src/pipeline_service/: db.py  models.py  node_types.py  settings.py  tasks.py  utils.py
pipeline_service/src/pipeline_service/api/: __init__.py  ai.py  palette.py  pipelines.py  runs.py  sessions.py  shadow.py  ssas.py  templates.py  transforms.py  workspace.py
pipeline_service/tests/: conftest.py  test_pipelines_api.py  test_runs_api.py  test_sessions_api.py  test_uber_pipeline_api.py
(+96 files in other folders)
